# kappy-imessage-server

./: .gitignore  Cargo.toml  README.md  validation.json.example
api/: Cargo.toml
api/src/: config.rs  line.rs  main.rs  routes.rs  types.rs
api/static/: index.html
docs/: API.md  BUILD.md  nac-pac-research.md  spike-runbook.md  utm-macos15-fresh-vm.md
docs/superpowers/context/: rustpush-build-and-runtime-context.md
docs/superpowers/plans/: 2026-07-08-poc-3-line-mac-plan.md
docs/superpowers/specs/: 2026-07-07-virtual-android-fleet-design.md
poc/: CONCURRENT.md  DECISIONS.md  README.md  concurrent-tmux.sh  lines.toml.example  ngrok.env.example  shared.env.example
poc/lines/: line-1.env.example  line-2.env.example  line-3.env.example
scripts/: automate-imessage-toggle.applescript  helper-vm-setup.sh  kappy-app.sh  physical-pilot-capture-and-register.sh  physical-pilot-frida-register.sh  physical-pilot-lldb-register.sh  poc-api.sh  poc-capture-validation-only.sh  poc-copy-hw-export.sh  poc-init-line.sh  poc-line.sh  poc-preflight.sh  poc-recover-auth.sh  poc-refresh-validation.sh  poc-run-pollers.sh  poc-setup-line.sh  poc-smoke-test.sh  poc-sms-reg-bridge.sh  poc-sms-reg-modem.py  poc-sms-reg-tunnel.sh  poc-status.sh  poc-telnyx-set-webhook.sh  poc-validation-daemon.sh  remote-setup-helper-vm.sh  run-kappy-nacserv.sh  run-remote-validation-pusher.sh  run-validation-nacserv-poller.sh  run-validation-relay-fetch.sh  run-validation-sidecar.sh  setup-pilot-via-utm-vm.sh  test-vm-full-stack.sh  trigger-imessage-nac.sh  vendor-rustpush.sh  vm-gui-capture-local.sh  vm-gui-ids-import-test.sh  vm-refresh-validation-and-register.sh
spike/: .env.example  .env.helper  Cargo.toml  SPIKE_REPORT.md  build.rs  validation.json
spike/proto/: mac_hw_info.proto
spike/src/: anisette.rs  carrier_probe.rs  engine.rs  hardware.rs  hwinfo.rs  ids_handles.rs  import_gui.rs  import_ids_export.rs  keystore_setup.rs  lib.rs  login.rs  mac_config.rs  main.rs  sms_reg.rs  state.rs  util.rs  validation.rs
spike/state.bak.20260707-181930/: validation.json
spike/state.bak.20260707/state/: validation.json
spike/state.bak.pre-6004-test/: validation.json
tools/android-sms-bridge/: README.md  settings.gradle.kts
tools/android-sms-bridge/app/: build.gradle.kts
tools/android-sms-bridge/app/src/main/: AndroidManifest.xml
tools/hw-export/: Package.swift
tools/hw-export/.build/: build.db  release.yaml  workspace-state.json
tools/hw-export/.build/arm64-apple-macosx/release/: kappy-hw-export  plugin-tools-description.json
tools/hw-export/.build/arm64-apple-macosx/release/Modules/: SwiftProtobuf.swiftdoc  SwiftProtobuf.swiftmodule  (+4 more)
tools/hw-export/.build/plugins/cache/: SwiftProtobufPlugin  SwiftProtobufPlugin-state.json
tools/hw-export/.build/repositories/swift-protobuf-88c150a7/: FETCH_HEAD  packed-refs
tools/hw-export/Sources/kappy-hw-export/: HwIdentifiers.swift  main.swift
tools/kappy-ids-export/: README.md  capture-ids.sh  dump_key  ids_key_probe  test_find_key  test_sign
tools/kappy-ids-export/lldb/: capture_ids.lldb  ids_capture.py  test_keypair.lldb
tools/kappy-nacserv/: Cargo.toml  README.md
tools/kappy-nacserv/src/: main.rs
tools/nac-validation-provider/: .gitignore  Makefile  README.md  kappy-nac-validation-provider.x86_64  main.m  meow_memory.h  meow_memory.m  nac_pac.h  nac_pac.m  nac_proxy.h  nac_proxy.m  nac_scan.h  nac_scan.m  nac_validate.h  nac_validate.m  nac_wrapper.m  offsets.h  validation.stderr
tools/nac-validation-provider/frida/: README.md  capture_validation.py  nac_hooks.js  run-frida-nac.sh
tools/nac-validation-provider/lldb/: capture_nac.lldb  nac_capture.py
tools/nac-validation-provider/scripts/: arm64e_string_xrefs.py  scan_key_est.py  scan_patterns.py
(+178 files in other folders)
