[package]
name = "kappy-api"
version = "0.1.0"
edition = "2021"
description = "REST API for multi-line kappy-spike iMessage fleet"
publish = false

[[bin]]
name = "kappy-api"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
kappy-spike = { path = "../spike" }
log = "0.4"
pretty_env_logger = "0.5"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
uuid = { version = "1", features = ["v4", "serde"] }
rustpush = { path = "../vendor/rustpush", default-features = false, features = ["remote-anisette-v3"] }
