[package]
name = "kappy-spike"
version = "0.1.0"
edition = "2021"
description = "U0 R1 feasibility spike: rustpush headless iMessage on macOS"
publish = false

[[bin]]
name = "kappy-spike"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
log = "0.4"
plist = "1"
pretty_env_logger = "0.5"
prost = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

# Path after running scripts/vendor-rustpush.sh from repo root.
rustpush = { path = "../vendor/rustpush", default-features = false, features = ["remote-anisette-v3"] }

[build-dependencies]
prost-build = "0.12"
